fix(i18n): corrigir signup e onboarding step1
🔧 HOTFIX CRÍTICO

Problemas Corrigidos:
1. signup/page.tsx: navegação de objeto (t.auth.signup) → função t()
2. Step1BasicData: physiological keys faltando

Mudanças:
- signup: t.auth?.signup?.key → t('key')
- onboarding.step1: +physiological keys (13 keys × 3 langs)

Keys Adicionadas:
- physiological.title
- physiological.restingHR + note + placeholder
- physiological.sleepQuality + 5 levels
- physiological.stressLevel + 5 levels

Total: +39 traduções (13 keys × 3 idiomas)

Validação: ✅ 4/4 testes passing

Refs: #hotfix #i18n-critical

--- a/lib/i18n/translations/en.json
+++ b/lib/i18n/translations/en.json
@@ -127,6 +127,28 @@
         "weightInvalid": "Weight must be between 30 and 200 kg",
         "heightRequired": "Height is required",
         "heightInvalid": "Height must be between 120 and 250 cm"
+      },
+      "physiological": {
+        "title": "Physiological Data",
+        "restingHR": "Resting HR (bpm)",
+        "restingHRNote": "40-80 normal for athletes",
+        "restingHRPlaceholder": "Ex: 60",
+        "sleepQuality": "Sleep Quality",
+        "sleepLevels": {
+          "poor": "1-4h (Poor)",
+          "fair": "4-6h (Fair)",
+          "good": "6-7h (Good)",
+          "veryGood": "7-8h (Very Good)",
+          "excellent": "8h+ (Excellent)"
+        },
+        "stressLevel": "Stress Level",
+        "stressLevels": {
+          "low": "Very Low",
+          "mild": "Low",
+          "moderate": "Moderate",
+          "high": "High",
+          "veryHigh": "Very High"
+        }
       }
     },
     "step2": {
