feat(profile): expand PerformanceTab with experience data
Sprint 1.1 Complete ✅

Added:
- Running experience section (level, years, weekly km, longest run)
- Other sports textarea
- Translations for pt-BR, en, es
- Maintains existing best times section
- Enhanced save handler for all fields

Shows:
- runningLevel (beginner/intermediate/advanced)
- runningYears
- currentWeeklyKm
- longestRun
- otherSportsExperience
- bestTimes (existing)
- currentVDOT (existing)

Result: PerformanceTab now shows 100% of collected data ✅

Part of convergence initiative v1.6.0
Fixes: User can now see ALL running experience data in profile

--- a/lib/i18n/translations/en.json
+++ b/lib/i18n/translations/en.json
@@ -405,6 +405,23 @@
     "performance": {
       "title": "Best Times",
       "description": "Your personal records at different distances",
+      "experienceTitle": "Running Experience",
+      "runningLevel": "Running Level",
+      "levels": {
+        "beginner": "Beginner",
+        "intermediate": "Intermediate",
+        "advanced": "Advanced"
+      },
+      "yearsRunning": "Years Running",
+      "yearsHelp": "How many years have you been running regularly?",
+      "currentWeeklyKm": "Current Weekly Volume (km)",
+      "weeklyKmHelp": "How many km do you currently run per week?",
+      "longestRun": "Longest Run (km)",
+      "longestRunHelp": "What was your longest training run ever?",
+      "otherSports": "Other Sports",
+      "otherSportsPlaceholder": "Ex: Swimming 2x/week, Cycling on weekends",
+      "otherSportsHelp": "Other physical activities you practice",
+      "saveChanges": "Save Changes",
       "addTimeTitle": "Add Time",
       "addTimeDescription": "Record your recent race time",
       "selectDistance": "Select Distance",
