feat(onboarding): add long run day selection in Step 6
Sprint 1.2 Complete ✅

Added:
- longRunDay state in Step6Availability
- Select field to choose preferred long run day
- Only shows available running days in dropdown
- Auto-save with debounce
- Visual confirmation when selected
- Translations (pt-BR, en, es)

User can now:
- Choose which day for their longest training
- See selected day clearly highlighted
- System saves longRunDay to database

This is CRITICAL for plan generation - the most important
training day should be user-controlled, not arbitrary.

Part of convergence initiative v1.6.0
Fixes: longRunDay now collected in onboarding ✅

--- a/lib/i18n/translations/en.json
+++ b/lib/i18n/translations/en.json
@@ -303,6 +303,9 @@
       "subtitle": "When can you train?",
       "trainingDaysTitle": "Running Days",
       "selectDaysDescription": "Select the days you can run",
+      "longRunDayTitle": "Long Run Day",
+      "longRunDayDescription": "Choose the day of the week for your longest training. Usually on weekends, but you decide!",
+      "selectLongRunDay": "Select a day...",
       "daysOfWeek": {
         "sunday": "Sunday",
         "monday": "Monday",
