feat(profile): add language selection in PreferencesTab
Sprint 1.4 Complete ✅

Added:
- Language selector (pt-BR, en, es) with flags
- Unit system selector (metric/imperial)
- API endpoint /api/user/preferences
- Auto-redirect after language change
- Toast notifications for success/error
- Translations for all 3 languages

User can now:
- Change interface language from profile
- Select preferred unit system
- See immediate feedback
- Interface updates automatically

Part of convergence initiative v1.6.0
Fixes: User preferences now fully editable ✅

--- a/lib/i18n/translations/en.json
+++ b/lib/i18n/translations/en.json
@@ -534,6 +534,20 @@
     },
     "preferences": {
       "title": "Training Preferences",
+      "language": {
+        "title": "Language and Units",
+        "label": "Interface Language",
+        "description": "Select your preferred language. The interface will update automatically."
+      },
+      "units": {
+        "label": "Unit System",
+        "metric": "Metric",
+        "imperial": "Imperial"
+      },
+      "languageChanged": "Language changed successfully!",
+      "languageChangeError": "Error changing language",
+      "preferencesSaved": "Preferences saved successfully!",
+      "saveError": "Error saving preferences",
       "location": {
         "label": "🏃 Where Do You Prefer to Train?",
         "street": "street",
