fix(i18n): corrige traduções da tela de login
- Adiciona tradução 'orContinueWith' em PT-BR, EN e ES
- Adiciona tradução 'signingIn' para botão de loading
- Adiciona traduções 'invalidCredentials' e 'googleError'
- Resolve problemas de textos em inglês durante login

--- a/lib/i18n/translations/en.json
+++ b/lib/i18n/translations/en.json
@@ -48,9 +48,13 @@
       "passwordPlaceholder": "Your password",
       "forgotPassword": "Forgot password?",
       "signIn": "Sign In",
+      "signingIn": "Signing in...",
       "noAccount": "Don't have an account?",
       "signUpLink": "Create account",
       "googleSignIn": "Sign in with Google",
+      "orContinueWith": "or continue with",
+      "invalidCredentials": "Invalid email or password",
+      "googleError": "Error signing in with Google. Please try again.",
       "errors": {
         "invalid": "Invalid email or password",
         "network": "Connection error. Please try again.",
