feat: melhorias no Step7 e geração automática do plano
PROBLEMA 1: Botão finishAndCreatePlan não traduzido ✅
═════════════════════════════════════════════════════════
✅ Adicionado 'finishAndCreatePlan': 'Finalizar e Criar Plano' em pt-BR.json
✅ Adicionado 'finishAndCreatePlan': 'Finish and Create Plan' em en.json
✅ Adicionado 'creatingPlan': 'Criando seu plano...' em ambos idiomas

PROBLEMA 2: Acentuação (Musculação → musculacao) ✅
═════════════════════════════════════════════════════════
✅ Corrigido keys das atividades em Step6Availability.tsx
   • 'musculacao' → 'Musculação'
   • 'natacao' → 'Natação'
   • 'ciclismo' → 'Ciclismo'
   • Yoga, Pilates, Luta mantidos capitalizados

Motivo: Os 'keys' estavam sem acentuação mas labels tinham.
Quando salvava no DB, salvava o key sem acentuação.
Solução: key = label (ambos com acentuação correta)

PROBLEMA 3: Geração automática do plano ✅
═════════════════════════════════════════════════════════
✅ Criado componente PlanGenerationLoading.tsx
   • Loading divertido com 15 mensagens de humor
   • Progress bar animada de 0-100%
   • Mensagens: 'Colocando óculos baixa pace', 'Tomando gel', etc
   • Animação do boneco correndo 🏃‍♂️
   • Timeline com checkmarks ✓

✅ Atualizado onboarding/page.tsx:
   • Após criar perfil, chama /api/plan/generate automaticamente
   • Mostra loading por ~30s enquanto gera
   • Não bloqueia fluxo se falhar (fail-safe)
   • Redireciona para dashboard após concluir

✅ Mensagens de loading em pt-BR.json:
   • 15 frases divertidas sobre corrida
   • Humor + educacional
   • Mantém usuário engajado

BENEFÍCIOS
═════════════════════════════════════════════════════════
✓ UX melhorada: Usuário não clica 2x (onboarding + dashboard)
✓ Onboarding fluido: Finaliza → Gera → Dashboard (seamless)
✓ Entretenimento: Loading divertido vs tela branca
✓ Fail-safe: Se geração falhar, usuário ainda vai pro dashboard
✓ I18n correto: Todas as strings traduzidas
✓ Acentuação correta: Português adequado no DB

ARQUIVOS MODI

--- a/lib/i18n/translations/en.json
+++ b/lib/i18n/translations/en.json
@@ -9,6 +9,8 @@
     "next": "Next",
     "previous": "Previous",
     "finish": "Finish",
+    "finishAndCreatePlan": "Finish and Create Plan",
+    "creatingPlan": "Creating your plan...",
     "loading": "Loading...",
     "error": "Error",
     "success": "Success",
